# media-controller

./: .gitignore  CMakeLists.txt  HOME_ASSISTANT_CONFIG.md  THUMBNAIL_SOLUTION.md  sdkconfig  sdkconfig.defaults  sdkconfig.pngopt
.claude/: settings.local.json
components/esp_touch/: touch_bsp.c
components/i2c_bsp/: i2c_bsp.c  i2c_bsp.h
components/pngle/: CMakeLists.txt  idf_component.yml  pngle.c
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c
main/display/: display_driver.c  display_driver.h  lvgl_setup.c  lvgl_setup.h
main/network/: mqtt_handler.c  mqtt_handler.h  wifi_manager.c  wifi_manager.h
main/ui/: ui_components.c  ui_components.h  ui_hello.c  ui_hello.h  ui_manager.c  ui_manager.h  ui_media.c  ui_media.h
thumbnail_converter/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  config.toml  docker-compose.yml  run.bat  run.sh
thumbnail_converter/src/: main.rs
