[package]
name = "thumbnail_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
# MQTT client
rumqttc = "0.24"

# Image processing
image = "0.25"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
